--- a/app/src/main/res/layout/item_sample.xml
+++ b/app/src/main/res/layout/item_sample.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/backgroundItem"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:padding="10dp"
